Fix text overflowing to iterator number

--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ div[class^="line"] {
 }
 .review-iterator {
     grid-column: 3/4;
-    grid-row: 2/3;
+    grid-row: 4/5;
     align-self: end;
     font-weight: 500;
     color: #6248ff;
